--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Tap-Tap by Satish
     <div>
         <h1>Support Developer </h1>
         <h3>Buy me a Coffee</h3>
-<p> <a href="image/25 QR.jpeg">25$</a> <a href="image/50 QR.jpeg">50$</a> <a href="image/100 QR.jpeg">100$</a></p>
+<p> <a href="image/25 QR.jpeg">25₹</a> <a href="image/50 QR.jpeg">50₹</a> <a href="image/100 QR.jpeg">100₹</a></p>
 
 <br><br>
 <p class="copyright">© Satish_shekhar 2021</p>
