--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@ Tap-Tap by Satish
         <h3>Buy me a Coffee</h3>
 <p> <a href="image/25 QR.jpeg">25₹</a> <a href="image/50 QR.jpeg">50₹</a> <a href="image/100 QR.jpeg">100₹</a></p>
 
-<br><br>
+<br>
+        <a href='https://freehitcounters.org/'>freeHitCounters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=208302b0e560506232aec5e5fdd54043c2127e3d'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/843406/t/9"></script>
+       <br>
 <p class="copyright">© Satish_shekhar 2021</p>
     </div>
 
